Add google fonts

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <title>Elite Sanctuary Timer</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Asap+Condensed|Orbitron&display=swap"
+      rel="stylesheet"
+    />
+    />
   </head>
 
   <body>
@@ -19,9 +24,9 @@
       </p>
       <div class="btn-container">
         <!-- Start timer button -->
-        <button class="startBtn" onClick="startTimer()">Start Timer</button>
+        <button class="btn" onClick="startTimer()">Start Timer</button>
         <!-- Stop timer button -->
-        <button class="stopBtn" onClick="stopTimer()">Stop Timer</button>
+        <button class="btn" onClick="stopTimer()">Stop Timer</button>
       </div>
     </div>
 
