Edit button text

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       </p>
       <div class="btn-container">
         <!-- Start timer button -->
-        <button class="btn" onClick="startTimer()">Start Timer</button>
+        <button class="btn" onClick="startTimer()">Start</button>
         <!-- Stop timer button -->
-        <button class="btn" onClick="stopTimer()">Stop Timer</button>
+        <button class="btn" onClick="stopTimer()">Stop</button>
       </div>
     </div>
 
