Edit description & button text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
       href="https://fonts.googleapis.com/css?family=Asap+Condensed|Orbitron&display=swap"
       rel="stylesheet"
     />
-    />
   </head>
 
   <body>
@@ -20,13 +19,14 @@
         the seconds before you can nuke the map, but more often than not end up
         locked out of that sweet sweet nuking moment? Fret no longer! This Elite
         Sanctuary Timer comes with a hands-free looping timer that chimes gently
-        every ten seconds. Start and stop options also included!
+        every ten seconds. Start and stop options also included to prevent slow
+        burning insanity!
       </p>
       <div class="btn-container">
         <!-- Start timer button -->
-        <button class="btn" onClick="startTimer()">Start</button>
+        <button class="btn" onClick="startTimer()">START</button>
         <!-- Stop timer button -->
-        <button class="btn" onClick="stopTimer()">Stop</button>
+        <button class="btn" onClick="stopTimer()">STOP</button>
       </div>
     </div>
 
