Edit sound directory

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         myInterval = setInterval(function() {
           var myTimeout = setTimeout(function() {
             // Sound file access/play
-            var audio = new Audio("/sound/tone.wav");
+            var audio = new Audio("./sound/tone.wav");
             audio.play();
           }, 100);
         }, 10500);
