Edit description for 15 seconds

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         the seconds before you can nuke the map, but more often than not end up
         locked out of that sweet sweet nuking moment? Fret no longer! This Elite
         Sanctuary Timer comes with a hands-free looping timer that chimes gently
-        every ten and a half seconds, giving you that half second to react.
-        Start and stop options also included to prevent slow burning insanity!
+        every fifteen seconds, giving you five extra seconds to build up your
+        ability. Start and stop options also included to prevent slow burning
+        insanity!
       </p>
       <div class="btn-container">
         <!-- Start timer button -->
