--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         Have you ever played Warframe? Have you dabbled in the hardcore mode
         known as Elite Sanctuary? If you have, are you tired of counting down
         the seconds before you can nuke the map, but more often than not end up
-        locked out of that sweet sweet nuking moment? Fret no longer! This Elite
-        Sanctuary Timer comes with a hands-free looping timer that chimes gently
-        every fifteen seconds, giving you five extra seconds to build up your
-        ability. Start and stop options also included to prevent slow burning
-        insanity!
+        locked out of that sweet, sweet nuking moment? Fret no longer! This
+        Elite Sanctuary Timer comes with a hands-free looping timer that chimes
+        gently every fifteen seconds, giving you five extra seconds to perfectly
+        time that oh so sweet nuke. Start and stop options also included to
+        prevent slow burning insanity!
       </p>
       <div class="btn-container">
         <!-- Start timer button -->
@@ -47,10 +47,10 @@
 
     <!-- JavaScript -->
     <script>
-      // Global variable for setInterval()
+      // Global variable for setInterval(), used in startTimer & stopTimer functions
       var myInterval;
 
-      // Function sets approx 10 sec loop & adds chime sound
+      // Function sets approx 15 sec loop & adds chime sound
       function startTimer() {
         myInterval = setInterval(function() {
           var myTimeout = setTimeout(function() {
